--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
     "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
+    "moment": "^2.15.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-addons-update": "^15.3.2",
+    "react-datepicker": "^0.30.0",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-slick": "^0.14.5",
+    "slick-carousel": "^1.6.0"
   }
 }
