--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.1",
@@ -33,6 +34,7 @@
   "dependencies": {
     "moment": "^2.15.1",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-addons-update": "^15.3.2",
     "react-datepicker": "^0.30.0",
     "react-dom": "^15.3.2",
