--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-slick": "^0.14.5",
-    "slick-carousel": "^1.6.0"
+    "slick-carousel": "^1.6.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
